basic styling and content

--- a/index.html
+++ b/index.html
@@ -26,6 +26,86 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    HEllo world
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><img
+            src="src/MLB2 Logo.png"
+            alt="MLB2 Blood Drive Logo"
+            width="100"
+          />
+          MLB2 Memorial Blood Drive</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse flex" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Blood Drives</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="row p-5">
+        <div class="col-sm-6 p-3">
+          <img
+            src="src/MatthewRiver.jpg"
+            alt="Photo of Matthew Bell, II"
+            class="img-fluid rounded text-center"
+            width="300"
+          />
+        </div>
+        <div class="col-sm-6">
+          <h1 class="p-5 align-self-center">
+            Matthew L. Bell, II Memorial Blood Drive <br />#MLB2
+          </h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <h2>Give blood on December 17, 2021 in honor of Matthew!</h2>
+        </div>
+      </div>
+      <div class="row m-3">
+        <div class="col-6 p-3">
+          <h3>About Matthew</h3>
+          <p>
+            Matthew L Bell, II, was a fun-loving boy who enjoyed playing sports,
+            spending time with his family and friends, and his dog, Teddy. He
+            planned on making it big in both the NFL AND the NBA (and his family
+            has every confidence that he would have.) Matthew passed away at the
+            age of 13 on December 29, 2017.
+          </p>
+        </div>
+        <div class="col-6 p-3">
+          <h3>Why blood drives?</h3>
+          <p>
+            During treatment for ITP, Matthew received multiple blood products
+            in order to give him a chance to fight. While, ultimately the blood
+            products didn't save Matthew, this highlighted the importance of
+            donating blood to his family. The Bell family and their friends
+            continue Matthew’s legacy by giving other patients the chance to
+            fight.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
