--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             alt="MLB2 Blood Drive Logo"
             width="100"
           />
-          MLB2 Memorial Blood Drive</a
+          MLB2 Blood Drive</a
         >
         <button
           class="navbar-toggler"
@@ -63,7 +63,7 @@
       </div>
     </nav>
     <div class="container">
-      <div class="row p-5">
+      <div class="row padding-ult">
         <div class="col-sm-6 p-3">
           <img
             src="src/MatthewRiver.jpg"
@@ -80,11 +80,18 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <h2>Give blood on December 17, 2021 in honor of Matthew!</h2>
+          <h2>
+            <a
+              href="https://www.redcrossblood.org/give.html/drive-results?zipSponsor=MLB2"
+              target="_blank"
+            >
+              Give blood on December 17, 2021 in memory of Matthew!</a
+            >
+          </h2>
         </div>
       </div>
       <div class="row m-3">
-        <div class="col-6 p-3">
+        <div class="col-sm-6 p-3">
           <h3>About Matthew</h3>
           <p>
             Matthew L Bell, II, was a fun-loving boy who enjoyed playing sports,
@@ -93,8 +100,9 @@
             has every confidence that he would have.) Matthew passed away at the
             age of 13 on December 29, 2017.
           </p>
+          <a href="" class="btn learn-more-btn">Learn More</a>
         </div>
-        <div class="col-6 p-3">
+        <div class="col-sm-6 p-3">
           <h3>Why blood drives?</h3>
           <p>
             During treatment for ITP, Matthew received multiple blood products
@@ -104,6 +112,7 @@
             continue Matthew’s legacy by giving other patients the chance to
             fight.
           </p>
+          <a href="" class="btn learn-more-btn">Learn More</a>
         </div>
       </div>
     </div>
