adding nav links

--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="/"
           ><img
             src="src/MLB2 Logo.png"
             alt="MLB2 Blood Drive Logo"
             width="100"
           />
-          MLB2 Blood Drive</a
-        >
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -50,13 +49,13 @@
         <div class="collapse navbar-collapse flex" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Blood Drives</a>
+              <a class="nav-link" href="/blood-drives.html">Blood Drives</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="/contact.html">Contact</a>
             </li>
           </ul>
         </div>
