--- a/contact.html
+++ b/contact.html
@@ -27,14 +27,13 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="/"
           ><img
             src="src/MLB2 Logo.png"
             alt="MLB2 Blood Drive Logo"
             width="100"
           />
-          MLB2 Blood Drive</a
-        >
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -49,13 +48,16 @@
         <div class="collapse navbar-collapse flex" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Blood Drives</a>
+              <a class="nav-link" href="/blood-drives.html">Blood Drives</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/contact.html"
                 >Contact</a
               >
             </li>
