--- a/blood-drives.html
+++ b/blood-drives.html
@@ -11,6 +11,10 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
@@ -65,10 +69,11 @@
         </div>
       </div>
     </nav>
-    <h1>Saving over 600 lives for Matthew</h1>
+
     <div class="container">
+      <h1 class="mt-4">Saving over 600 lives for Matthew</h1>
       <div class="row padding-ult align-items-center">
-        <div class="col-sm-6 p-3">
+        <div class="col-sm-6 p-2">
           <img
             src="src/Dec2019BD.jpg"
             alt="December 2019 Blood Drive Family Photo"
@@ -76,7 +81,7 @@
             width="400"
           />
         </div>
-        <div class="col-sm-6 align-middle">
+        <div class="col-sm-6 p-2 pb-0">
           <p>
             After Matthew passed away, the Bell family knew that he still had
             more to give to the community. Instead of helping old ladies at the
@@ -86,7 +91,7 @@
         </div>
       </div>
       <div class="row align-items-center">
-        <div class="col-sm-6 p-3">
+        <div class="col-sm-6 p-2">
           <p>
             Even through COVID lockdowns, the Bells and their friends host a
             blood drive twice a year. The December drive is memory of the
@@ -95,7 +100,7 @@
             all in Matthew's memory.
           </p>
         </div>
-        <div class="col-sm-6 p-3">
+        <div class="col-sm-6 p-2">
           <img
             src="src/May2020BD.jpg"
             alt="May 2020 Blood Drive Family Photo"
@@ -104,6 +109,24 @@
           />
         </div>
       </div>
+      <footer class="m-5">
+        <hr />
+        <div class="social-links">
+          <a
+            href="https://www.redcrossblood.org/give.html/drive-results?zipSponsor=MLB2"
+            target="_blank"
+            ><i class="bi bi-droplet-fill"></i
+          ></a>
+          <a href="https://www.instagram.com/remilybell/" target="_blank"
+            ><i class="bi bi-instagram"></i
+          ></a>
+          <a
+            href="https://github.com/rachelbell27/responsive-project"
+            target="_blank"
+            ><i class="bi bi-github"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
