--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
@@ -114,6 +118,24 @@
           <a href="" class="btn learn-more-btn">Learn More</a>
         </div>
       </div>
+      <footer class="m-5">
+        <hr />
+        <div class="social-links">
+          <a
+            href="https://www.redcrossblood.org/give.html/drive-results?zipSponsor=MLB2"
+            target="_blank"
+            ><i class="bi bi-droplet-fill"></i
+          ></a>
+          <a href="https://www.instagram.com/remilybell/" target="_blank"
+            ><i class="bi bi-instagram"></i
+          ></a>
+          <a
+            href="https://github.com/rachelbell27/responsive-project"
+            target="_blank"
+            ><i class="bi bi-github"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
