--- a/blood-drives.html
+++ b/blood-drives.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blood Drives</title>
+    <title>Blood Drives | MLB2 Memorial Blood Drive</title>
+    <meta
+      name="description"
+      content="History and information about the previous MLB2 Memorial Blood Drives."
+    />
+    <link
+      rel="shortcut icon"
+      href="/src/droplet-fill.svg"
+      type="image/x-icon"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -52,18 +61,21 @@
         <div class="collapse navbar-collapse flex" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
+              <a class="nav-link" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link active"
                 aria-current="page"
                 href="/blood-drives.html"
+                title="About MLB2 Memorial Blood Drive"
                 >Blood Drives</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/contact.html" title="Contact page"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -73,15 +85,35 @@
     <div class="container">
       <h1 class="mt-4">Saving over 600 lives for Matthew</h1>
       <div class="row padding-ult align-items-center">
-        <div class="col-sm-6 p-2">
+        <div class="col-sm-6 p-1">
+          <p>
+            Before Matthew passed away, he was the joy and light of the Bell
+            family. Affectionately known as "the Gentle Giant", he brought a
+            mischievous levity to the lives of everyone he met. When he passed,
+            the world missed him and so his family decided to continue his
+            legacy and help people.
+          </p>
+        </div>
+        <div class="col-sm-6 p-1">
+          <img
+            src="src/Bell Family Dec 2017.jpg"
+            alt="Dec 2017 Bell Family"
+            class="img-fluid rounded text-center"
+            width="300"
+          />
+        </div>
+      </div>
+
+      <div class="row padding-ult align-items-center">
+        <div class="col-sm-6 p-1">
           <img
             src="src/Dec2019BD.jpg"
             alt="December 2019 Blood Drive Family Photo"
             class="img-fluid rounded text-center"
-            width="400"
+            width="300"
           />
         </div>
-        <div class="col-sm-6 p-2 pb-0">
+        <div class="col-sm-6 p-1 pb-0">
           <p>
             After Matthew passed away, the Bell family knew that he still had
             more to give to the community. Instead of helping old ladies at the
@@ -90,22 +122,22 @@
           </p>
         </div>
       </div>
-      <div class="row align-items-center">
-        <div class="col-sm-6 p-2">
+      <div class="row padding-ult align-items-center">
+        <div class="col-sm-6 p-1">
           <p>
             Even through COVID lockdowns, the Bells and their friends host a
             blood drive twice a year. The December drive is memory of the
             anniversary of his death. The May blood drive is in celebration of
-            his birthday. Each drive, over 100 people show up and donate blood
+            his birthday. Every drive, over 100 people show up and donate blood
             all in Matthew's memory.
           </p>
         </div>
-        <div class="col-sm-6 p-2">
+        <div class="col-sm-6 p-1">
           <img
             src="src/May2020BD.jpg"
             alt="May 2020 Blood Drive Family Photo"
             class="img-fluid rounded text-center"
-            width="400"
+            width="300"
           />
         </div>
       </div>
@@ -115,14 +147,19 @@
           <a
             href="https://www.redcrossblood.org/give.html/drive-results?zipSponsor=MLB2"
             target="_blank"
+            title="MLB2 Memorial Blood Drive Sign-up"
             ><i class="bi bi-droplet-fill"></i
           ></a>
-          <a href="https://www.instagram.com/remilybell/" target="_blank"
+          <a
+            href="https://www.instagram.com/remilybell/"
+            target="_blank"
+            title="Instagram for Matthew's sister"
             ><i class="bi bi-instagram"></i
           ></a>
           <a
             href="https://github.com/rachelbell27/responsive-project"
             target="_blank"
+            title="Github repository for project"
             ><i class="bi bi-github"></i
           ></a>
         </div>
