--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="The homepage for the MLB2 Memorial Blood Drives. Includes information on the next blood drive and Matthew."
+    />
+    <title>Home | MLB2 Memorial Blood Drive</title>
+    <link
+      rel="shortcut icon"
+      href="/src/droplet-fill.svg"
+      type="image/x-icon"
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
@@ -53,13 +62,26 @@
         <div class="collapse navbar-collapse flex" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/blood-drives.html">Blood Drives</a>
+              <a
+                class="nav-link"
+                href="/blood-drives.html"
+                title="About MLB2 Memorial Blood Drive"
+                >Blood Drives</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/contact.html" title="Contact page"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -83,10 +105,11 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <h2>
+          <h2 class="rounded">
             <a
               href="https://www.redcrossblood.org/give.html/drive-results?zipSponsor=MLB2"
               target="_blank"
+              title="Red Cross Blood signup link for MLB2 Blood Drive"
             >
               Give blood on December 17, 2021 in memory of Matthew!</a
             >
@@ -103,7 +126,12 @@
             has every confidence that he would have.) Matthew passed away at the
             age of 13 on December 29, 2017.
           </p>
-          <a href="" class="btn learn-more-btn">Learn More</a>
+          <a
+            href="/blood-drives.html"
+            class="btn learn-more-btn"
+            title="About MLB2 Memorial Blood Drive"
+            >Learn More</a
+          >
         </div>
         <div class="col-sm-6 p-3">
           <h3>Why blood drives?</h3>
@@ -115,7 +143,12 @@
             continue Matthew’s legacy by giving other patients the chance to
             fight.
           </p>
-          <a href="" class="btn learn-more-btn">Learn More</a>
+          <a
+            href="/blood-drives.html"
+            class="btn learn-more-btn"
+            title="About MLB2 Memorial Blood Drive"
+            >Learn More</a
+          >
         </div>
       </div>
       <footer class="m-5">
@@ -124,14 +157,19 @@
           <a
             href="https://www.redcrossblood.org/give.html/drive-results?zipSponsor=MLB2"
             target="_blank"
+            title="MLB2 Memorial Blood Drive Sign-up"
             ><i class="bi bi-droplet-fill"></i
           ></a>
-          <a href="https://www.instagram.com/remilybell/" target="_blank"
+          <a
+            href="https://www.instagram.com/remilybell/"
+            target="_blank"
+            title="Instagram for Matthew's sister"
             ><i class="bi bi-instagram"></i
           ></a>
           <a
             href="https://github.com/rachelbell27/responsive-project"
             target="_blank"
+            title="Github repository for project"
             ><i class="bi bi-github"></i
           ></a>
         </div>
