--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blood Drives</title>
+    <meta
+      name="description"
+      content="The contact and call to action for the MLB2 Memorial blood drives. Includes personal contact information and information on how to donate."
+    />
+    <title>Contact | MLB2 Memorial Blood Drive</title>
+
+    <link
+      rel="shortcut icon"
+      href="/src/droplet-fill.svg"
+      type="image/x-icon"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -52,16 +62,22 @@
         <div class="collapse navbar-collapse flex" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
+              <a class="nav-link" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/blood-drives.html">Blood Drives</a>
+              <a
+                class="nav-link"
+                href="/blood-drives.html"
+                title="About MLB2 Memorial Blood Drive"
+                >Blood Drives</a
+              >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link active"
                 aria-current="page"
                 href="/contact.html"
+                title="Contact page"
                 >Contact</a
               >
             </li>
@@ -69,17 +85,19 @@
         </div>
       </div>
     </nav>
-    <h1>Join us at our next drive!</h1>
+    <h1 class="mt-4">Join us at our next drive!</h1>
     <div class="container">
       <div class="row padding-ult">
         <div class="col-sm-6 p-3">
-          <h2>Volunteer!</h2>
-          <p>
+          <h2 class="rounded">Volunteer!</h2>
+          <p class="mt-3">
             Contact Rachel Bell
             <br />
             540-931-1964
             <br />
-            bell.rachel95@gmail.com
+            <a href="mailto:bell.rachel95@gmail.com" title="Contact email link"
+              >bell.rachel95@gmail.com</a
+            >
           </p>
           <p class="italicize">
             Volunteers are always needed to help with the kitchen, walking
@@ -88,8 +106,8 @@
           </p>
         </div>
         <div class="col-sm-6 p-3">
-          <h2>Donate Blood!</h2>
-          <p>
+          <h2 class="rounded">Donate Blood!</h2>
+          <p class="mt-3">
             Our next drive will be held on December 17th, 2021 in Berryville,
             VA. If you can't donate at our drive, we encourage you to donate
             when/where you can, people always need saving.
@@ -97,6 +115,7 @@
           <a
             href="https://www.redcrossblood.org/give.html/drive-results?zipSponsor=MLB2"
             target="_blank"
+            title="MLB2 Memorial Blood Drive Sign-up"
             class="btn learn-more-btn"
             >Sign Up!</a
           >
@@ -108,14 +127,19 @@
           <a
             href="https://www.redcrossblood.org/give.html/drive-results?zipSponsor=MLB2"
             target="_blank"
+            title="MLB2 Memorial Blood Drive Sign-up"
             ><i class="bi bi-droplet-fill"></i
           ></a>
-          <a href="https://www.instagram.com/remilybell/" target="_blank"
+          <a
+            href="https://www.instagram.com/remilybell/"
+            target="_blank"
+            title="Instagram for Matthew's sister"
             ><i class="bi bi-instagram"></i
           ></a>
           <a
             href="https://github.com/rachelbell27/responsive-project"
             target="_blank"
+            title="Github repository for project"
             ><i class="bi bi-github"></i
           ></a>
         </div>
