--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
           />
         </div>
         <div class="col-sm-6">
-          <h1 class="p-5 align-self-center">
-            Matthew L. Bell, II Memorial Blood Drive <br />#MLB2
+          <h1 class="padding-ult align-self-center">
+            Matthew L. Bell, II <br />Memorial Blood Drive <br />#MLB2
           </h1>
         </div>
       </div>
